generated/checkers/gen/AllGen-Buffer-Overflow-b58b1b883b9b702e25204dbe2b221eecc8ecd159/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::isRecordedShortenDeclRefForIter(const clang::Expr*, clang::ento::CheckerContext&, const clang::ento::MemRegion*, const clang::VarDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:121:62: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
  121 |   const MemRegion *Recorded = State->get<ShortenToIterRegion>(VD);
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                              |
      |                                                              clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘bool {anonymous}::hasClampGuardNear(const clang::Stmt*, const clang::VarDecl*, const clang::ento::MemRegion*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:256:34: error: no match for ‘operator[]’ (operand types are ‘clang::CompoundStmt::body_const_range’ {aka ‘llvm::iterator_range<clang::Stmt* const*>’} and ‘int’)
  256 |     const Stmt *Prev = CS->body()[I];
      |                                  ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostStmt(const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:397:23: warning: unused variable ‘VD’ [-Wunused-variable]
  397 |       if (const auto *VD = dyn_cast<VarDecl>(DRE->getDecl())) {
      |                       ^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
